<resources>
    <string name="app_name">3rdWheel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_rent">Rent</string>
    <string name="text_Purchase">Purchase</string>
    <string name="text_host">Host</string>
    <string name="text_admin">Admin</string>
    <string name="text_profile">Profile</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Password Confirm</string>
    <string name="registered">Already Registered? Login Here</string>
    <string name="alreadyUser">New User? Register Here</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
</resources>